--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
-@import '~font-awesome/css/font-awesome.css';
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" );
-body{
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+html,
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #333;
+  background-color: #fff;
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  line-height: 1.5;
 }
