--- a/src/app/modules/home/home/home.component.css
+++ b/src/app/modules/home/home/home.component.css
@@ -2,6 +2,9 @@
   height: 100vh;
   margin: 0 auto;
   padding: 30px 20px;
+  background-color: antiquewhite;
+  background-size: cover;
+  overflow: scroll;
 }
 
 .app-home-content {
